--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </p>
                 <p class="description">
                     <b>Product company</b>. <br>
-                    <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planing/Time tracking/Steering, Figma, GitLab.</span>
+                    <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planning/Time tracking/Steering, Figma, GitLab.</span>
                     <br><br>
                     <b>Description:</b>
                     <span class="description-stack">The main task for me is to create a new front-end version from scratch with a modern SPA architecture for a product that has already been on the market for 10 years.
@@ -124,7 +124,7 @@
                         <li>Vue 2 & Vue 3</li>
                         <li>Creation of the frontent architecture of the project (multi-lang, multi-brands, micro-frontend)</li>
                         <li>Hire and orginize front-end team</li>
-                        <li>Planing roadmap, routine meetings with Product owner & Product manager</li>
+                        <li>Planning roadmap, routine meetings with Product owner & Product manager</li>
                         <li>Code reviewe, grooming, check team work, auto tests</li>
                     </ul>
                 </p>
@@ -250,7 +250,7 @@
                 </p>
                 <p class="description">
                     <b>Start-up company</b>. <br>
-                    <b>Stack:</b> <span class="description-stack">Vue.js, Vuex, Vue SSR on Node.js, React.js, JavaScript, HTML, CSS/SCSS , WebSockets, REST API, Scrum, <nobr>Planing/Time tracking,</nobr> Zeplin, GitHub</span>
+                    <b>Stack:</b> <span class="description-stack">Vue.js, Vuex, Vue SSR on Node.js, React.js, JavaScript, HTML, CSS/SCSS , WebSockets, REST API, Scrum, <nobr>Planning/Time tracking,</nobr> Zeplin, GitHub</span>
                     <br><br>
                     <b>Description:</b>
                     <span class="description-stack">The main goal for me there was to create front-end part of MVP for social network from scratch</span>
@@ -344,7 +344,7 @@
                     <li>Communication with stakeholders</li>
                     <li>Responsible</li>
                     <li>Intermediate English (spoken and writen skills)</li>
-                    <li>Planing, Grooming, Steerings skills</li>
+                    <li>Planning, Grooming, Steerings skills</li>
                     <li>Team player</li>
                     <li>Scrum, Kanban</li>
                     <li>Jira, Assana, Slack</li>
