--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <br><br>
                     <b>Description:</b>
                     <span class="description-stack">The main task for me is to create a new front-end version from scratch with a modern SPA architecture for a product that has already been on the market for 10 years.
-                        I am responsible for all new front-end on the project and migration from old front-end to new.</span>
+                        I oversee all aspects of the new front-end. on the project and migration from old front-end to new.</span>
                     <br> <br>
                     <b>Responsibilities:</b>
                     <ul class="description">
