--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@
                 <h3>Hard skills:</h3>
                 <ul>
                     <li>JavaScript & TypeScript</li>
-                    <li>Vue 2 (5 years) and Vue 3 (2 years)</li>
-                    <li>Store Vuex and Pinia</li>
+                    <li>Vue 2 (5 years) <br> Vue 3 (2 years)</li>
+                    <li>Vuex & Pinia</li>
                     <li>Vuetify, Quasar, vue-material</li>
                     <li>Nuxt, SSR</li>
                     <li>React, Redux</li>
                     <li>HTML5, CSS3 (SCSS)</li>
-                    <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First</li>
+               <!-- <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First</li> -->
                     <li>Node.js, npm</li>
                     <li>JQuery</li>
                     <li>Unit tests (Jest) & TDD</li>
