--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
                 <h3>Hard skills:</h3>
                 <ul>
                     <li>JavaScript & TypeScript</li>
-                    <li>Vue 2 (5 years) <br> Vue 3 (2 years)</li>
+                    <li>Vue 3 - Composition API (3 years)</li>
+                    <li>Vue 2 - Options API (5 years)</li>
                     <li>Vuex & Pinia</li>
                     <li>Vuetify, Quasar, vue-material</li>
                     <li>Nuxt, SSR</li>
